# arcis-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/agents/: assignment.py  conflict_detector.py  hash_chain.py  ingestion.py  map_generator.py  orchestrator.py  prioritizer.py  validator.py
backend/src/api/: router.py
backend/src/api/routes/: assignment.py  audit.py  audit_log.py  auth.py  conflicts.py  dashboard.py  evidence.py  generation.py  ingestion.py  maps.py  notifications.py  regulations.py  risks.py  sample_data.py  validation.py
backend/src/core/: authz.py  config.py  database.py  sample_data.py  schema_sync.py  security.py
backend/src/models/: entities.py
backend/src/schemas/: api.py
backend/src/services/: audit_service.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.tsx  styles.css
frontend/src/api/: client.js  client.ts
frontend/src/pages/: Dashboard.js  Dashboard.tsx
frontend/src/types/: dashboard.ts
